feature section updated

--- a/index.html
+++ b/index.html
@@ -745,13 +745,74 @@
     <div class="feature mt-5 white-smoke">
       <div class="container">
         <div class="row content text-center">
-          <h2 class="text-uppercase text-danger fw-bold mt-5">FEATURES</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas non repudiandae atque at, perspiciatis
-            recusandae sequi iure doloremque dicta dolorem!</p>
+          <h2 class="text-uppercase text-danger fw-bold mt-5"> OUR FEATURES</h2>
+          <p>Aflax Digital Signage will ensure that the desire audience never misses a message with our complete digital
+            signage integrated solutions. Our Content Management System lets you easily manage, schedule and track
+            engagement with your visual content. Our solutions provide with clients with - > Proof of Play, Triggered
+            Content, Real Time Events ( RTE’s) Analytics. </p>
           <br>
           <br>
           <br>
           <div class="row">
+            <div class="col-md-7">
+              <div class="row">
+                <div class="col-md-3 border border-dark m-4 p-1 featureshover">
+                  <img width="80" height="80" src="assets/img/features/content2.png" alt="" class="img-fluid">
+                  <br>
+                  <br>
+                  <h6><b>Easy Content Creation</b></h6>
+                  <p>Easily access eye-catching animations and interactive content with Aflax Signage Creator.</p>
+                </div>
+                <div class="col-md-3 border border-dark m-4 p-1 featureshover">
+                  <img width="80" height="80" src="assets/img/features/calendar.png" alt="" class="img-fluid">
+                  <br>
+                  <br>
+                  <h6><b>Schedules and Campaigns</b></h6>
+                  <p>Schedule content changes in advance which can include seasonal or promotional campaigns.</p>
+                </div>
+                <div class="col-md-3 border border-dark m-4 p-1 bord featureshover">
+                  <img width="80" height="80" src="assets/img/features/global.png" alt="" class="img-fluid">
+                  <br>
+                  <br>
+                  <h6><b>Deploy content Globally </b></h6>
+                  <p>Deploy different content across the globe in just one click with Aflax digital signage Director.
+                  </p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-3 border border-dark m-4 p-1 featureshover">
+                  <img width="80" height="80" src="assets/img/features/data.png" alt="" class="img-fluid">
+                  <br>
+                  <br>
+                  <h6><b>External Data feed Triggers </b></h6>
+                  <p>From weather to audience measurement data, Aflax digital signage makes it easy to content external
+                    triggers to truly converse with individuals.</p>
+                </div>
+                <div class="col-md-3 border border-dark m-4 p-1 bord featureshover">
+                  <img width="80" height="80" src="assets/img/features/interactive.png" alt="" class="img-fluid">
+                  <br>
+                  <br>
+                  <h6><b>Build Interactive Digital Experiences</b></h6>
+                  <p>From interactive kiosks to tablet application, Aflax digital signage makes it easy to build
+                    interactive
+                    experiences.</p>
+                </div>
+                <div class="col-md-3 border border-dark m-4 p-1 featureshover">
+                  <img width="80" height="80" src="assets/img/features/sensor.png" alt="" class="img-fluid">
+                  <br>
+                  <br>
+                  <h6><b>Adding Sensor Devices</b></h6>
+                  <p>From product located touch sensors to Lift ‘n’ Learn applications, Aflax digital signage makes it
+                    easy
+                    to build interactive experiences.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-5">
+              <img height="1000" src="assets/img/features/whole.png" alt="" class="img-fluid">
+            </div>
+          </div>
+          <!-- <div class="row">
             <div class="col-md-2 offset-md-1 border border-dark p-1 mb-1 featureshover">
               <img width="80" height="80" src="assets/img/features/setup.png" alt="" class="img-fluid">
               <br>
@@ -788,9 +849,9 @@
               <h6><b>Deploy content Globally </b></h6>
               <p>Deploy different content across the globe in just one click with Aflax digital signage Director.</p>
             </div>
-          </div>
+          </div> -->
 
-          <div class="row" id="ourWork">
+          <!-- <div class="row" id="ourWork">
             <div class="col-md-2 offset-md-1 border border-dark p-1 featureshover">
               <img width="80" height="80" src="assets/img/features/calendar.png" alt="" class="img-fluid">
               <br>
@@ -829,7 +890,7 @@
               <p>From product located touch sensors to Lift ‘n’ Learn applications, Aflax digital signage makes it easy
                 to build interactive experiences.</p>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
@@ -1342,9 +1403,10 @@
     </section><!-- End Clients Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact bg-danger">
+    <section id="contact" class="contact" style="background-color: #d9232d;">
       <div class="container">
-        <h2 class="text-center text-uppercase text-danger fw-bold"><b><span class="text-white">CONTACT US TODAY</span></b></h2>
+        <h2 class="text-center text-uppercase text-danger fw-bold"><b><span class="text-white">CONTACT US
+              TODAY</span></b></h2>
         <!-- <h2 class="text-center"><b>Book An Online Demo</b></h2> -->
         <!-- <div>
           <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
@@ -1378,7 +1440,7 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form bg-danger">
+            <form action="forms/contact.php" method="post" role="form" class="php-email-form" style="background-color: #d9232d;">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your First Name" required>
@@ -1514,7 +1576,7 @@
       autoplayTimeout: 1000,
       autoplayHoverPause: true,
       nav: true,
-      navText : ["<i class='fa fa-chevron-left'></i>","<i class='fa fa-chevron-right'></i>"],
+      navText: ["<i class='fa fa-chevron-left'></i>", "<i class='fa fa-chevron-right'></i>"],
       responsive: {
         0: {
           items: 1
