carousel arrow size incresed

--- a/index.html
+++ b/index.html
@@ -1440,7 +1440,8 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form" style="background-color: #d9232d;">
+            <form action="forms/contact.php" method="post" role="form" class="php-email-form"
+              style="background-color: #d9232d;">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your First Name" required>
@@ -1548,6 +1549,9 @@
       </div>
     </div>
 
+    <h1 class="display-1"><i class='fa fa-chevron-left'></i></h1>
+    <h1 class="display-1"><i class='fa fa-chevron-right'></i></h1>
+
     <div class="container">
       <div class="copyright">
         &copy; Copyright <strong><span>AFLAX DIGITAL SIGNAGE</span></strong>. All Rights Reserved
@@ -1576,7 +1580,7 @@
       autoplayTimeout: 1000,
       autoplayHoverPause: true,
       nav: true,
-      navText: ["<i class='fa fa-chevron-left'></i>", "<i class='fa fa-chevron-right'></i>"],
+      navText: ["<h1 class='display-4'><i class='fa fa-chevron-left'></i></h1>", "<h1 class='display-4'><i class='fa fa-chevron-right'></i></h1>"],
       responsive: {
         0: {
           items: 1
