--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
           <br>
           <br>
           <div class="row">
-            <div class="col-md-7">
+            <div class="col-md-8">
               <div class="row">
                 <div class="col-md-3 border border-dark m-4 p-1 featureshover">
                   <img width="80" height="80" src="assets/img/features/content2.png" alt="" class="img-fluid">
@@ -808,7 +808,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-5">
+            <div class="col-md-4 d-flex align-items-center">
               <img height="1000" src="assets/img/features/whole.png" alt="" class="img-fluid">
             </div>
           </div>
@@ -1403,7 +1403,7 @@
     </section><!-- End Clients Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact" style="background-color: #d9232d;">
+    <section id="contact" class="contact" style="background-color: #29aae1;">
       <div class="container">
         <h2 class="text-center text-uppercase text-danger fw-bold"><b><span class="text-white">CONTACT US
               TODAY</span></b></h2>
@@ -1441,7 +1441,7 @@
           <div class="col-lg-8 mt-5 mt-lg-0">
 
             <form action="forms/contact.php" method="post" role="form" class="php-email-form"
-              style="background-color: #d9232d;">
+              style="background-color: #29aae1;">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your First Name" required>
@@ -1490,8 +1490,8 @@
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-  <footer id="footer" style="background-color: #000000;">
-    <div class="footer-top" style="background-color: #000000;">
+  <footer id="footer" style="background-color: #8B0000;">
+    <div class="footer-top" style="background-color: #8B0000;">
       <div class="container">
         <div class="row">
 
@@ -1548,9 +1548,6 @@
         </div>
       </div>
     </div>
-
-    <h1 class="display-1"><i class='fa fa-chevron-left'></i></h1>
-    <h1 class="display-1"><i class='fa fa-chevron-right'></i></h1>
 
     <div class="container">
       <div class="copyright">
