customers, contact-us and footer bg color changed

--- a/index.html
+++ b/index.html
@@ -1403,7 +1403,7 @@
     </section><!-- End Clients Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact" style="background-color: #29aae1;">
+    <section id="contact" class="contact">
       <div class="container">
         <h2 class="text-center text-uppercase text-danger fw-bold"><b><span class="text-white">CONTACT US
               TODAY</span></b></h2>
@@ -1440,8 +1440,7 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form"
-              style="background-color: #29aae1;">
+            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your First Name" required>
@@ -1490,8 +1489,8 @@
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-  <footer id="footer" style="background-color: #8B0000;">
-    <div class="footer-top" style="background-color: #8B0000;">
+  <footer id="footer">
+    <div class="footer-top">
       <div class="container">
         <div class="row">
 
