new feature images added

--- a/index.html
+++ b/index.html
@@ -179,10 +179,10 @@
                 <span class="red">AFLAX: RETAIL</span> <br> PUT YOUR
                 CUSTOMERS IN THE MOOD TO BUY
               </h2>
-              <p class="animate__animated animate__fadeInUp">Create a fully-branded in-store experience that drives
+              <!-- <p class="animate__animated animate__fadeInUp">Create a fully-branded in-store experience that drives
                 lasting results by creating an Interactive Customer Experience with Aflax Digital Signage. For retailers
                 looking for something special, we offer a range of innovative digital signage retail solutions to make
-                your store stand out. to buy again and again.</p>
+                your store stand out. to buy again and again.</p> -->
               <a href="#" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a>
             </div>
           </div>
@@ -194,9 +194,9 @@
             <div class="container mt-5">
               <h2 class="animate__animated animate__fadeInDown mt-5"><span class="orange">AFLAX: RESTAURANTS</span> <br>
                 COMPLETE THE DINING EXPERIENCE</h2>
-              <p class="animate__animated animate__fadeInUp">For a restaurant, the right sights and sounds complement
+              <!-- <p class="animate__animated animate__fadeInUp">For a restaurant, the right sights and sounds complement
                 great food and service to deliver a consistent experience. Remotely manage a network Of digital a signs
-                and content using our cloud software. It’s all on the menu.</p>
+                and content using our cloud software. It’s all on the menu.</p> -->
               <a href="#" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a>
             </div>
           </div>
@@ -210,9 +210,9 @@
                 <br>DELIVER
                 A HEALTHY DOSE OF MUSIC – AND MORE
               </h2>
-              <p class="animate__animated animate__fadeInUp">With Aflax’s proven healthcare
+              <!-- <p class="animate__animated animate__fadeInUp">With Aflax’s proven healthcare
                 solutions, you’ll provide a soothing and welcoming environment for your patients. Bundle solutions to
-                reduce overhead costs for maximum ROI.</p>
+                reduce overhead costs for maximum ROI.</p> -->
               <a href="#" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a>
             </div>
           </div>
@@ -225,10 +225,10 @@
               <h2 class="animate__animated animate__fadeInDown mt-5"><span class="red">AFLAX: CONVENIENCE STORE</span>
                 <br>BRING CUSTOMERS BACK
               </h2>
-              <p class="animate__animated animate__fadeInUp">Bringing customers back is all about meeting expectations
+              <!-- <p class="animate__animated animate__fadeInUp">Bringing customers back is all about meeting expectations
                 and delivering a consistent experience. With our affordable and proven solutions, you’ll drive in-store
                 traffic and build lasting customer loyalty for the repeat business that convenience stores rely on.
-              </p>
+              </p> -->
               <a href="#" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a>
             </div>
           </div>
@@ -242,10 +242,10 @@
                 <br>PUT
                 THEM IN THE MOOD TO STAY
               </h2>
-              <p class="animate__animated animate__fadeInUp">Guests are always coming and going. Whatever
+              <!-- <p class="animate__animated animate__fadeInUp">Guests are always coming and going. Whatever
                 your style – boutique, extended stay, or full service – the right audio, visuals and scent can work
                 together to set the distinct mood that speaks to your brand and your clientele, ensuring lasting guest
-                loyalty.</p>
+                loyalty.</p> -->
               <a href="#" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a>
             </div>
           </div>
@@ -461,7 +461,7 @@
               create easily, manage and deploy digital content to any device, anywhere in the world.</p>
           </div>
           <div class="row mt-5">
-            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
+            <div class="col-md-3 border border-dark mx-md-5 m-2 p-2 featureshover">
               <div class="text-center">
                 <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/menu.png" alt="">
               </div>
@@ -471,7 +471,7 @@
                 you can
                 get up and running in minutes, with minimal disruption to your store or restaurant.</p>
             </div>
-            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
+            <div class="col-md-3 border border-dark  mx-md-5 m-2 p-2 featureshover">
               <div class="text-center">
                 <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/interactive.png" alt="">
               </div>
@@ -481,7 +481,7 @@
                 provides you with all the tools to build fully interactive applications and signage content with ease.
               </p>
             </div>
-            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
+            <div class="col-md-3 border border-dark  mx-md-5 m-2 p-2 featureshover">
               <div class="text-center">
                 <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/signage.png" alt="">
               </div>
@@ -493,7 +493,7 @@
           </div>
 
           <div class="row mt-5">
-            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
+            <div class="col-md-3 border border-dark mx-md-5 m-2 p-2 featureshover">
               <div class="text-center">
                 <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/outdoor.png" alt="">
               </div>
@@ -503,7 +503,7 @@
                 signage to drive traffic to your business. With Aflax, outdoor totems can generate huge footfall by
                 capturing new customers and raising brand awareness.</p>
             </div>
-            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
+            <div class="col-md-3 border border-dark mx-md-5 m-2 p-2 featureshover">
               <div class="text-center">
                 <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/video.png" alt="">
               </div>
@@ -511,7 +511,7 @@
               <p>Build video walls of virtually any size or orientation. Enjoy seamless content playback across multiple
                 screens, and even build interactive video walls and multi-screen kiosks.</p>
             </div>
-            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
+            <div class="col-md-3 border border-dark mx-md-5 m-2 p-2 featureshover">
               <div class="text-center">
                 <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/shelf.png" alt="">
               </div>
@@ -522,7 +522,7 @@
           </div>
 
           <div class="row mt-5">
-            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
+            <div class="col-md-3 border border-dark mx-md-5 m-2 p-2 featureshover">
               <div class="text-center">
                 <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/project.png" alt="">
               </div>
@@ -532,7 +532,7 @@
                 with, what you want to say and when. We can then select the right combination of products and services
                 which provides you with a bespoke solution.</p>
             </div>
-            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
+            <div class="col-md-3 border border-dark mx-md-5 m-2 p-2 featureshover">
               <div class="text-center">
                 <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/cloude.png" alt="">
               </div>
@@ -541,7 +541,7 @@
                 to easily create, edit, manage, deploy and report on digital content in real-time. It’s all cloud-based
                 which means you don’t have to worry about downloading any software.</p>
             </div>
-            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
+            <div class="col-md-3 border border-dark mx-md-5 m-2 p-2 featureshover">
               <div class="text-center">
                 <img width="80" height="80" class="img-fluid" src="assets/img/what-we-do/hardware.png" alt="">
               </div>
@@ -756,21 +756,21 @@
           <div class="row">
             <div class="col-md-8">
               <div class="row">
-                <div class="col-md-3 border border-dark m-4 p-1 featureshover">
+                <div class="col-md-3 border border-dark m-md-4 m-2 p-1 featureshover">
                   <img width="80" height="80" src="assets/img/features/content2.png" alt="" class="img-fluid">
                   <br>
                   <br>
                   <h6><b>Easy Content Creation</b></h6>
                   <p>Easily access eye-catching animations and interactive content with Aflax Signage Creator.</p>
                 </div>
-                <div class="col-md-3 border border-dark m-4 p-1 featureshover">
+                <div class="col-md-3 border border-dark m-md-4 m-2 p-1 featureshover">
                   <img width="80" height="80" src="assets/img/features/calendar.png" alt="" class="img-fluid">
                   <br>
                   <br>
                   <h6><b>Schedules and Campaigns</b></h6>
                   <p>Schedule content changes in advance which can include seasonal or promotional campaigns.</p>
                 </div>
-                <div class="col-md-3 border border-dark m-4 p-1 bord featureshover">
+                <div class="col-md-3 border border-dark m-md-4 m-2 p-1 bord featureshover">
                   <img width="80" height="80" src="assets/img/features/global.png" alt="" class="img-fluid">
                   <br>
                   <br>
@@ -780,7 +780,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-md-3 border border-dark m-4 p-1 featureshover">
+                <div class="col-md-3 border border-dark m-md-4 m-2 p-1 featureshover">
                   <img width="80" height="80" src="assets/img/features/data.png" alt="" class="img-fluid">
                   <br>
                   <br>
@@ -788,7 +788,7 @@
                   <p>From weather to audience measurement data, Aflax digital signage makes it easy to content external
                     triggers to truly converse with individuals.</p>
                 </div>
-                <div class="col-md-3 border border-dark m-4 p-1 bord featureshover">
+                <div class="col-md-3 border border-dark m-md-4 m-2 p-1 bord featureshover">
                   <img width="80" height="80" src="assets/img/features/interactive.png" alt="" class="img-fluid">
                   <br>
                   <br>
@@ -797,7 +797,7 @@
                     interactive
                     experiences.</p>
                 </div>
-                <div class="col-md-3 border border-dark m-4 p-1 featureshover">
+                <div class="col-md-3 border border-dark m-md-4 m-2 p-1 featureshover">
                   <img width="80" height="80" src="assets/img/features/sensor.png" alt="" class="img-fluid">
                   <br>
                   <br>
@@ -808,8 +808,63 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4 d-flex align-items-center">
-              <img height="1000" src="assets/img/features/whole.png" alt="" class="img-fluid">
+            <div class="col-md-4 mt-5">
+              <div class="row mt-5">
+                <div class="col-md-3 col-6 my-3 my-md-0">
+                  <img src="assets/img/features/f1.png" alt="" class="img-fluid">
+                </div>
+                <div class="col-md-3 col-6 my-3 my-md-0">
+                  <img src="assets/img/features/f2.png" alt="" class="img-fluid">
+                </div>
+                <div class="col-md-3 col-6 my-3 my-md-0">
+                  <img src="assets/img/features/f3.png" alt="" class="img-fluid">
+                </div>
+                <div class="col-md-3 col-6 my-3 my-md-0">
+                  <img src="assets/img/features/f4.png" alt="" class="img-fluid">
+                </div>
+              </div>
+              <div class="row mt-5">
+                <div class="col-md-3 col-6 my-3 my-md-0">
+                  <img src="assets/img/features/f5.png" alt="" class="img-fluid">
+                </div>
+                <div class="col-md-3 col-6 my-3 my-md-0">
+                  <img src="assets/img/features/f6.png" alt="" class="img-fluid">
+                </div>
+                <div class="col-md-3 col-6 my-3 my-md-0">
+                  <img src="assets/img/features/f7.png" alt="" class="img-fluid">
+                </div>
+                <div class="col-md-3 col-6 my-3 my-md-0">
+                  <img src="assets/img/features/f8.png" alt="" class="img-fluid">
+                </div>
+              </div>
+              <div class="row mt-5">
+                <div class="col-md-3 col-6 my-3 my-md-0">
+                  <img src="assets/img/features/f9.png" alt="" class="img-fluid">
+                </div>
+                <div class="col-md-3 col-6 my-3 my-md-0">
+                  <img src="assets/img/features/f10.png" alt="" class="img-fluid">
+                </div>
+                <div class="col-md-3 col-6 my-3 my-md-0">
+                  <img src="assets/img/features/f11.png" alt="" class="img-fluid">
+                </div>
+                <div class="col-md-3 col-6 my-3 my-md-0">
+                  <img src="assets/img/features/f12.png" alt="" class="img-fluid">
+                </div>
+              </div>
+              <div class="row mt-5">
+                <div class="col-md-3 col-6 my-3 my-md-0">
+                  <img src="assets/img/features/f13.png" alt="" class="img-fluid">
+                </div>
+                <div class="col-md-3 col-6 my-3 my-md-0">
+                  <img src="assets/img/features/f14.png" alt="" class="img-fluid">
+                </div>
+                <div class="col-md-3 col-6 my-3 my-md-0">
+                  <img src="assets/img/features/f15.png" alt="" class="img-fluid">
+                </div>
+                <div class="col-md-3 col-6 my-3 my-md-0">
+                  <img src="assets/img/features/f16.png" alt="" class="img-fluid">
+                </div>
+              </div>
             </div>
           </div>
           <!-- <div class="row">
