responsiveness for mobile

--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
     .owl-next {
       right: -2rem;
     }
+
+
+    video {
+      width: 100%;
+      height: auto;
+    }
   </style>
 
   <!-- =======================================================
@@ -434,10 +440,10 @@
                 </p>
               </div>
             </div>
-            <div class="col-md-6">
-              <video width="560" height="415" controls>
-                <source src="assets/vdo/video1.mp4">
-              </video>
+            <div class="col-md-6 mt-5">
+                <video width="560" height="415" controls>
+                  <source src="assets/vdo/video1.mp4">
+                </video>
               <!-- <iframe width="560" height="415" src="https://www.youtube.com/embed/Q59eVItS4Vg"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -1065,7 +1071,7 @@
           <br>
           <br>
           <div class="row">
-            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
+            <div class="col-md-3 border border-dark mx-2 mx-md-5 p-2 featureshover">
               <img width="80" height="80" src="assets/img/industries/retail.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -1073,7 +1079,7 @@
               <p>The retail sector is very popular for digital signage and mortar all wrangling to grab customers,
                 attention. When compared to static signage, digital signage solutions capture 400% more views.</p>
             </div>
-            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
+            <div class="col-md-3 border border-dark m-2 mx-md-5 p-2 featureshover">
               <img width="80" height="80" src="assets/img/industries/restaurant.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -1082,7 +1088,7 @@
                 cross-sells and drives a 31.8% upsell in overall sales volume at point of sale by displaying dynamic and
                 relevant content to your customers.</p>
             </div>
-            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
+            <div class="col-md-3 border border-dark m-2 mx-md-5 p-2 featureshover">
               <img width="80" height="80" src="assets/img/industries/tranportation.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -1094,7 +1100,7 @@
 
           </div>
           <div class="row mt-5">
-            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
+            <div class="col-md-3 border border-dark m-2 mx-md-5 p-2 featureshover">
               <img width="80" height="80" src="assets/img/industries/health.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -1104,7 +1110,7 @@
                 the healthcare industry the ability to engage and interactive with their patients and improve the level
                 of care.</p>
             </div>
-            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
+            <div class="col-md-3 border border-dark m-2 mx-md-5 p-2 featureshover">
               <img width="80" height="80" src="assets/img/industries/entertainment.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -1114,7 +1120,7 @@
                 advertising and promotional tools as it has been proven to increase the average purchase amount by
                 29.5%.</p>
             </div>
-            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
+            <div class="col-md-3 border border-dark m-2 mx-md-5 p-2 featureshover">
               <img width="80" height="80" src="assets/img/industries/corporate.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -1125,7 +1131,7 @@
             </div>
           </div>
           <div class="row mt-5" id="customers">
-            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
+            <div class="col-md-3 border border-dark m-2 mx-md-5 p-2 featureshover">
               <img width="80" height="80" src="assets/img/industries/education.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -1134,7 +1140,7 @@
                 the most common solution for schools. Colleges. Universities and other training facilities are
                 interactive touch displays, video walls and reception screens.</p>
             </div>
-            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
+            <div class="col-md-3 border border-dark m-2 mx-md-5 p-2 featureshover">
               <img width="80" height="80" src="assets/img/industries/hospitality.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -1144,7 +1150,7 @@
                 reception screens can really make a big difference within a hospitality venue and if used correctly can
                 boost customer satisfaction by 46%.</p>
             </div>
-            <div class="col-md-3 border border-dark mx-5 p-2 featureshover">
+            <div class="col-md-3 border border-dark m-2 mx-md-5 p-2 featureshover">
               <img width="80" height="80" src="assets/img/industries/logistics.png" alt="" class="img-fluid">
               <br>
               <br>
