--- a/index.html
+++ b/index.html
@@ -760,23 +760,23 @@
           <br>
           <br>
           <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-7">
               <div class="row">
-                <div class="col-md-3 border border-dark m-md-4 m-2 p-1 featureshover">
+                <div class="col-md-3 border border-dark mx-md-4 mx-2 mb-md-4 mb-2 p-1 featureshover">
                   <img width="80" height="80" src="assets/img/features/content2.png" alt="" class="img-fluid">
                   <br>
                   <br>
                   <h6><b>Easy Content Creation</b></h6>
                   <p>Easily access eye-catching animations and interactive content with Aflax Signage Creator.</p>
                 </div>
-                <div class="col-md-3 border border-dark m-md-4 m-2 p-1 featureshover">
+                <div class="col-md-3 border border-dark mx-md-4 mx-2 mb-md-4 mb-2 p-1 featureshover">
                   <img width="80" height="80" src="assets/img/features/calendar.png" alt="" class="img-fluid">
                   <br>
                   <br>
                   <h6><b>Schedules and Campaigns</b></h6>
                   <p>Schedule content changes in advance which can include seasonal or promotional campaigns.</p>
                 </div>
-                <div class="col-md-3 border border-dark m-md-4 m-2 p-1 bord featureshover">
+                <div class="col-md-3 border border-dark mx-md-4 mx-2 mb-md-4 mb-2 p-1 bord featureshover">
                   <img width="80" height="80" src="assets/img/features/global.png" alt="" class="img-fluid">
                   <br>
                   <br>
@@ -786,7 +786,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-md-3 border border-dark m-md-4 m-2 p-1 featureshover">
+                <div class="col-md-3 border border-dark mx-md-4 mx-2 mt-md-4 p-1 featureshover">
                   <img width="80" height="80" src="assets/img/features/data.png" alt="" class="img-fluid">
                   <br>
                   <br>
@@ -794,7 +794,7 @@
                   <p>From weather to audience measurement data, Aflax digital signage makes it easy to content external
                     triggers to truly converse with individuals.</p>
                 </div>
-                <div class="col-md-3 border border-dark m-md-4 m-2 p-1 bord featureshover">
+                <div class="col-md-3 border border-dark mx-md-4 mx-2 mt-md-4 mt-2 p-1 bord featureshover">
                   <img width="80" height="80" src="assets/img/features/interactive.png" alt="" class="img-fluid">
                   <br>
                   <br>
@@ -803,7 +803,7 @@
                     interactive
                     experiences.</p>
                 </div>
-                <div class="col-md-3 border border-dark m-md-4 m-2 p-1 featureshover">
+                <div class="col-md-3 border border-dark mx-md-4 mx-2 mt-md-4 mt-2 p-1 featureshover">
                   <img width="80" height="80" src="assets/img/features/sensor.png" alt="" class="img-fluid">
                   <br>
                   <br>
@@ -814,60 +814,60 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4 mt-5">
-              <div class="row mt-5">
-                <div class="col-md-3 col-6 my-3 my-md-0">
+            <div class="col-md-5 d-flex align-content-between flex-wrap">
+              <div class="row">
+                <div class="col-md-3 col-6 my-3 my-md-0 featureshover">
                   <img src="assets/img/features/f1.png" alt="" class="img-fluid">
                 </div>
-                <div class="col-md-3 col-6 my-3 my-md-0">
+                <div class="col-md-3 col-6 my-3 my-md-0 featureshover">
                   <img src="assets/img/features/f2.png" alt="" class="img-fluid">
                 </div>
-                <div class="col-md-3 col-6 my-3 my-md-0">
+                <div class="col-md-3 col-6 my-3 my-md-0 featureshover">
                   <img src="assets/img/features/f3.png" alt="" class="img-fluid">
                 </div>
-                <div class="col-md-3 col-6 my-3 my-md-0">
+                <div class="col-md-3 col-6 my-3 my-md-0 featureshover">
                   <img src="assets/img/features/f4.png" alt="" class="img-fluid">
                 </div>
               </div>
-              <div class="row mt-5">
-                <div class="col-md-3 col-6 my-3 my-md-0">
+              <div class="row">
+                <div class="col-md-3 col-6 my-3 my-md-0 featureshover">
                   <img src="assets/img/features/f5.png" alt="" class="img-fluid">
                 </div>
-                <div class="col-md-3 col-6 my-3 my-md-0">
+                <div class="col-md-3 col-6 my-3 my-md-0 featureshover">
                   <img src="assets/img/features/f6.png" alt="" class="img-fluid">
                 </div>
-                <div class="col-md-3 col-6 my-3 my-md-0">
+                <div class="col-md-3 col-6 my-3 my-md-0 featureshover">
                   <img src="assets/img/features/f7.png" alt="" class="img-fluid">
                 </div>
-                <div class="col-md-3 col-6 my-3 my-md-0">
+                <div class="col-md-3 col-6 my-3 my-md-0 featureshover">
                   <img src="assets/img/features/f8.png" alt="" class="img-fluid">
                 </div>
               </div>
-              <div class="row mt-5">
-                <div class="col-md-3 col-6 my-3 my-md-0">
+              <div class="row">
+                <div class="col-md-3 col-6 my-3 my-md-0 featureshover">
                   <img src="assets/img/features/f9.png" alt="" class="img-fluid">
                 </div>
-                <div class="col-md-3 col-6 my-3 my-md-0">
+                <div class="col-md-3 col-6 my-3 my-md-0 featureshover">
                   <img src="assets/img/features/f10.png" alt="" class="img-fluid">
                 </div>
-                <div class="col-md-3 col-6 my-3 my-md-0">
+                <div class="col-md-3 col-6 my-3 my-md-0 featureshover">
                   <img src="assets/img/features/f11.png" alt="" class="img-fluid">
                 </div>
-                <div class="col-md-3 col-6 my-3 my-md-0">
+                <div class="col-md-3 col-6 my-3 my-md-0 featureshover">
                   <img src="assets/img/features/f12.png" alt="" class="img-fluid">
                 </div>
               </div>
-              <div class="row mt-5">
-                <div class="col-md-3 col-6 my-3 my-md-0">
+              <div class="row">
+                <div class="col-md-3 col-6 my-3 my-md-0 featureshover">
                   <img src="assets/img/features/f13.png" alt="" class="img-fluid">
                 </div>
-                <div class="col-md-3 col-6 my-3 my-md-0">
+                <div class="col-md-3 col-6 my-3 my-md-0 featureshover">
                   <img src="assets/img/features/f14.png" alt="" class="img-fluid">
                 </div>
-                <div class="col-md-3 col-6 my-3 my-md-0">
+                <div class="col-md-3 col-6 my-3 my-md-0 featureshover">
                   <img src="assets/img/features/f15.png" alt="" class="img-fluid">
                 </div>
-                <div class="col-md-3 col-6 my-3 my-md-0">
+                <div class="col-md-3 col-6 my-3 my-md-0 featureshover">
                   <img src="assets/img/features/f16.png" alt="" class="img-fluid">
                 </div>
               </div>
