industries section link up

--- a/index.html
+++ b/index.html
@@ -1072,14 +1072,17 @@
           <br>
           <div class="row">
             <div class="col-md-3 border border-dark mx-2 mx-md-5 p-2 featureshover">
+              <a href="retail.html" class="industries">
               <img width="80" height="80" src="assets/img/industries/retail.png" alt="" class="img-fluid">
               <br>
               <br>
               <h6><b>Retail</b></h6>
               <p>The retail sector is very popular for digital signage and mortar all wrangling to grab customers,
                 attention. When compared to static signage, digital signage solutions capture 400% more views.</p>
+                </a>
             </div>
             <div class="col-md-3 border border-dark m-2 mx-md-5 p-2 featureshover">
+              <a href="restaurants.html" class="industries">
               <img width="80" height="80" src="assets/img/industries/restaurant.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -1087,8 +1090,10 @@
               <p>Large fast-food chains have already exploited the tremendous benefits of digital signage. It promotes
                 cross-sells and drives a 31.8% upsell in overall sales volume at point of sale by displaying dynamic and
                 relevant content to your customers.</p>
+                </a>
             </div>
             <div class="col-md-3 border border-dark m-2 mx-md-5 p-2 featureshover">
+              <a href="airport.html" class="industries">
               <img width="80" height="80" src="assets/img/industries/tranportation.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -1096,11 +1101,13 @@
               <p>Airports, train and bus stations and even bus stops have become the most common places to encounter
                 digital signage. For instance, digital signage is ideal for flight and bus information to show arrivals
                 and departures and in duty-free areas of airports for advertising.</p>
+                </a>
             </div>
 
           </div>
           <div class="row mt-5">
             <div class="col-md-3 border border-dark m-2 mx-md-5 p-2 featureshover">
+              <a href="hospitals.html" class="industries">
               <img width="80" height="80" src="assets/img/industries/health.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -1109,8 +1116,10 @@
                 and patients. Whether used for wayfinding or displaying healthcare information, digital signage gives
                 the healthcare industry the ability to engage and interactive with their patients and improve the level
                 of care.</p>
+                </a>
             </div>
             <div class="col-md-3 border border-dark m-2 mx-md-5 p-2 featureshover">
+              <a href="#" class="industries">
               <img width="80" height="80" src="assets/img/industries/entertainment.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -1119,8 +1128,10 @@
                 signage, for example, in these types of environments digital signage can be used as an effective
                 advertising and promotional tools as it has been proven to increase the average purchase amount by
                 29.5%.</p>
+                </a>
             </div>
             <div class="col-md-3 border border-dark m-2 mx-md-5 p-2 featureshover">
+              <a href="#" class="industries">
               <img width="80" height="80" src="assets/img/industries/corporate.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -1128,10 +1139,12 @@
               <p>Keeping employees connected is just as important as enhancing customer experiences. In additional, to
                 offering a canvas for unlimited internal communications, internal digital signage can help build staff
                 morale, maximize productivity and enhance employee motivation.</p>
+                </a>
             </div>
           </div>
           <div class="row mt-5" id="customers">
             <div class="col-md-3 border border-dark m-2 mx-md-5 p-2 featureshover">
+              <a href="education.html" class="industries">
               <img width="80" height="80" src="assets/img/industries/education.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -1139,8 +1152,10 @@
               <p>Educational establishments are ideal environments to get the most out of digital signage. For instance,
                 the most common solution for schools. Colleges. Universities and other training facilities are
                 interactive touch displays, video walls and reception screens.</p>
+                </a>
             </div>
             <div class="col-md-3 border border-dark m-2 mx-md-5 p-2 featureshover">
+              <a href="hotels.html" class="industries">
               <img width="80" height="80" src="assets/img/industries/hospitality.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -1149,8 +1164,10 @@
                 information, so they are a natural home for digital signage. Digital posters, advertising displays and
                 reception screens can really make a big difference within a hospitality venue and if used correctly can
                 boost customer satisfaction by 46%.</p>
+                </a>
             </div>
             <div class="col-md-3 border border-dark m-2 mx-md-5 p-2 featureshover">
+              <a href="#" class="industries">
               <img width="80" height="80" src="assets/img/industries/logistics.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -1159,6 +1176,7 @@
                 types of environment digital signage can be used to inform operatives pending job queues, material
                 preparation and manufacturing instructions as it has been proven to increase the factory throughput by
                 30%.</p>
+                </a>
             </div>
           </div>
         </div>
