link up in the industry section

--- a/index.html
+++ b/index.html
@@ -1119,7 +1119,7 @@
                 </a>
             </div>
             <div class="col-md-3 border border-dark m-2 mx-md-5 p-2 featureshover">
-              <a href="#" class="industries">
+              <a href="gym.html" class="industries">
               <img width="80" height="80" src="assets/img/industries/entertainment.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -1131,7 +1131,7 @@
                 </a>
             </div>
             <div class="col-md-3 border border-dark m-2 mx-md-5 p-2 featureshover">
-              <a href="#" class="industries">
+              <a href="bank.html" class="industries">
               <img width="80" height="80" src="assets/img/industries/corporate.png" alt="" class="img-fluid">
               <br>
               <br>
@@ -1167,7 +1167,7 @@
                 </a>
             </div>
             <div class="col-md-3 border border-dark m-2 mx-md-5 p-2 featureshover">
-              <a href="#" class="industries">
+              <a href="rental.html" class="industries">
               <img width="80" height="80" src="assets/img/industries/logistics.png" alt="" class="img-fluid">
               <br>
               <br>
