--- a/index.html
+++ b/index.html
@@ -1595,33 +1595,42 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="rental.html">Rental</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="contact.html">Contact Us</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="retail.html">Retail</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="restaurants.html">Bar / Restaurants</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="hotels.html">Hotels</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="education.html">Education</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="bank.html">Bank</a></li>
             </ul>
           </div>
 
-          <div class="col-lg-4 col-md-6 footer-newsletter">
+          <div class="col-lg-3 col-md-6 footer-links">
+            <h4>Our Products</h4>
+            <ul>
+              <li><i class="bx bx-chevron-right"></i> <a href="indoor-lcd-display.html">Indoor LCD Display</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="lcd-video-wall.html">LCD Video Wall</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="lcd-advertising-display.html">LCD Advertising Display</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="outdoor-lcd-display.html">Outdoor LCD Display</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="advertising-light-box.html">Advertising Light Box</a></li>
+            </ul>
+          </div>
+
+          <!-- <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Our Newsletter</h4>
             <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
 
-          </div>
+          </div> -->
 
         </div>
       </div>
