--- a/index.html
+++ b/index.html
@@ -1575,7 +1575,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>Sailor</h3>
+              <h3>Aflax Digital Signage</h3>
               <p>
                 A108 Adam Street <br>
                 NY 535022, USA<br><br>
