--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <li><a href="bus-shelter.html">Bus Shelter</a></li>
               </ul>
             </li>
-            <li><a href="#">Advertise With Us</a></li>
+            <li><a href="advertising-with-us.html">Advertise With Us</a></li>
             <li><a href="rental.html">Rentals</a></li>
             <li><a href="contact.html">Contact</a></li>
             <!-- <li><a href="blog.html">Blog</a></li> -->
